@@ -13,12 +13,15 @@ env:
   - TARGET=
     CXX_FOR_TARGET=clang++
     CXXFLAGS_FOR_TARGET="-O3 -fPIC -pie -Wall"
-  - CXX_FOR_TARGET=g++-5
+  - TARGET=i686-linux-gnu
+    CXX_FOR_TARGET=g++-5
     CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
-    TARGET=i686-linux-gnu
-  - CXX_FOR_TARGET=g++-5
+  - TARGET=i686-linux-gnu
+    CXX_FOR_TARGET=clang++
     CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
-    TARGET=i386-linux-gnu
+  - TARGET=i386-linux-gnu
+    CXX_FOR_TARGET=g++-5
+    CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
   - TARGET=i386-linux-gnu
   - TARGET=armv7-a-linux-gnueabi
   - TARGET=armv6-linux-gnueabi
